--- a/css/style.css
+++ b/css/style.css
@@ -195,8 +195,18 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 	font-weight: 400;
 	margin-top: 150px;
 }
+@media (max-width: 480px) {
+	header .intro-text {
+		padding-top: 80px;
+	}
+}
+@media (min-width: 481px) {
+	header .intro-text {
+		padding-top: 200px;
+	}
+}
+
 header .intro-text {
-	padding-top: 200px;
 	padding-bottom: 50px;
 	text-align: center;
 }
