--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,7 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 }
 .navbar .navbar-collapse {
 	text-align: center;
+	background-color: #262626 !important;
 }
 #menu {
 	padding: 20px;
